--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,22 @@
-body{
-    background-color: blue;
-    font-family:Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+body {
+    background-image: url("Homero.jpeg");
+    background: size 10px;
+    background-repeat: no-repeat;
+    background-position: 30px;
+    background-attachment: fixed;
+    
 }
-h1{
-    color: brown;
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    
+    background: rgba(138, 129, 129, 0.2);
+    backdrop-filter: blur(8px);          
+    -webkit-backdrop-filter: blur(8px);  
+    
+    z-index: -1;
 }
