Reordenamiento de casos
se modifican las rutas de los casos para hacerlas viables de nuevo

--- a/templates/casoTres.html
+++ b/templates/casoTres.html
@@ -41,21 +41,12 @@
                                 </a>
                     <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="/casoUno">Primer Caso</a></li>
-                    <a class="dropdown-item" href="/casodos">Segundo Caso</a>
+                    <a class="dropdown-item" href="/casoDos">Segundo Caso</a>
                     <li><a class="dropdown-item" href="/casoTres">Tercer Caso</a></li>
                     <li><a class="dropdown-item" href="/casoCuatro">Cuarto Caso</a></li>
                     </ul>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input 
-                        class="form-control me-2" 
-                        type="search" 
-                        placeholder="Search" 
-                        aria-label="Search"
-                    >
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
             </div>
         </div>
     </nav>
