--- a/templates/index2.html
+++ b/templates/index2.html
@@ -43,7 +43,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/casoUno">Primer Caso</a></li>
-              <a class="dropdown-item" href="/casodos">Segundo Caso</a>
+              <a class="dropdown-item" href="/casoDos">Segundo Caso</a>
               <li><a class="dropdown-item" href="/casoTres">Tercer Caso</a></li>
               <li><a class="dropdown-item" href="/casoCuatro">Cuarto Caso</a></li>
             </ul>
