Actualizacion de caso de uso
Se realiza actualizacion del caso de uso para no generar conflicto desde un archivo que nos enviaban error

--- a/templates/casoCuatro.html
+++ b/templates/casoCuatro.html
@@ -128,9 +128,9 @@
     <h2>Relevancia del caso</h2>
     <p>Este ejemplo demuestra cómo el <strong>Machine Learning aplicado al e-commerce</strong> puede:</p>
     <ul>
-      <li>Convertir la experiencia digital en algo más humano y personalizado.</li>
-      <li>Servir como modelo para otras tiendas online que manejan catálogos grandes y necesitan una atención más dinámica.</li>
-      <li>Reemplazar la figura del vendedor físico con un asistente virtual inteligente, disponible 24/7.</li>
+      <li> - Convertir la experiencia digital en algo más humano y personalizado.</li>
+      <li> - Servir como modelo para otras tiendas online que manejan catálogos grandes y necesitan una atención más dinámica.</li>
+      <li> - Reemplazar la figura del vendedor físico con un asistente virtual inteligente, disponible 24/7.</li>
     </ul>
   </div>
 </body>
