modificacion caso uno
el caso uno ha sido modificado en su mayor parte, el front end ha cambiado por completo, han sido agregados modelos vistosos y una interfaz interactiva

--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,12 @@
 body {
+    background-image: url("Homero1.jpeg");
+    background: size 10px;
+    background-repeat: no-repeat;
+    background-position: 30px;
+    background-attachment: fixed;
+    
+}
+body {
     background-image: url("Homero.jpeg");
     background: size 10px;
     background-repeat: no-repeat;
