--- a/templates/index2.html
+++ b/templates/index2.html
@@ -11,6 +11,7 @@
     crossorigin="anonymous"
   >
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+ <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='icono.ico') }}">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
