--- a/templates/casodos.html
+++ b/templates/casodos.html
@@ -10,6 +10,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous"
   >
+      <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <style>
     body {
       background-color: #191414;
@@ -19,7 +20,7 @@
       background-color: #1DB954 !important;
     }
     .navbar a {
-      color: #ffffff !important;
+      color: #000000 !important;
       font-weight: bold;
     }
 
