--- a/templates/casoUno.html
+++ b/templates/casoUno.html
@@ -9,10 +9,11 @@
         rel="stylesheet" 
     >
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='icono.ico') }}">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
 </head>
 
-<body>
+<body class="bgH2">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
             <button 
