el caso uno ha sido terminado
actualizacion final de caso 1, con referencias, y trabajo realizado de forma pertinete

--- a/templates/casoUno.html
+++ b/templates/casoUno.html
@@ -53,7 +53,7 @@
     </nav>
     <div class="container text-center mt-5 text-light">
         <h1 class="fw-bold text-danger">Netflix y el Machine Learning</h1>
-        <p class="lead">Como se hace uso del ML dentro de la empresa</p>
+        <p class="lead">Como se usa dentro de la empresa</p>
     </div>
     <section class="container my-5">
         <div class="row g-4">
@@ -62,9 +62,11 @@
                     <div class="card-body">
                         <h5 class="card-title text-danger">Recomendar Contenido</h5>
                         <p class="card-text">
-                            Uno de los usos mas reconocidos dentro de el contexto de las plataformas de streaming, podria ser
-                            el de la recomendacion de contenido que estas nos brindan, las recomendaciones se actualizan con
-                            respecto a el tipo de series que vemos, el tiempo que la proyectamos y cuan interesados estamos en las mismas
+                            Uno de los usos más reconocidos dentro del contexto de las plataformas de streaming podría ser el de la recomendación de contenido 
+                            que estas nos brindan, recomendaciones que se actualizan constantemente con
+                            respecto al tipo de series que vemos, el tiempo que las proyectamos, cuán interesados estamos en
+                            las mismas y también considerando patrones de consumo previos para ofrecernos sugerencias 
+                            mucho más personalizadas y relevantes.
                             <a href="https://nodd3r.com/blog/netflix-utiliza-la-inteligencia-artificial-para-personalizar-sus-recomendaciones">(Nodd3r)2022 </a>
 
                         </p>
@@ -76,7 +78,14 @@
                 <div class="card h-100 shadow-lg">
                     <div class="card-body">
                         <h5 class="card-title text-danger">Optimización de Streaming</h5>
-                        <p class="card-text">La plataforma ajusta la calidad del video en tiempo real de acuerdo con tu conexión, usando modelos predictivos de machine learning.</p>
+                        <p class="card-text">La optimización de streaming con Machine Learning 
+                             se basa en analizar en tiempo real el comportamiento del usuario,
+                              las condiciones de la red y las características del contenido para mejorar la experiencia de
+                               reproducción. Los modelos de ML pueden predecir la calidad de conexión y ajustar dinámicamente la
+                                resolución o el buffer, evitando cortes o pausas. Además, permiten personalizar recomendaciones y 
+                                priorizar qué datos cargar primero, logrando una transmisión más fluida, eficiente y adaptada a cada usuario.
+                                <a href="https://superagi.com/optimizing-live-streaming-with-ai-a-comparison-of-the-best-tools-for-video-encoding-compression-and-content-searchability">SuperAgi(2025)</a>
+                            </p>
                     </div>
                 </div>
             </div>
@@ -85,7 +94,15 @@
                 <div class="card h-100 shadow-lg">
                     <div class="card-body">
                         <h5 class="card-title text-danger">Producción de Contenido</h5>
-                        <p class="card-text">Netflix analiza tendencias con IA para decidir qué producciones originales lanzar, aumentando el éxito de sus series y películas.</p>
+                        <p class="card-text">
+                            La producción de contenido con Machine Learning combina automatización inteligente, 
+                            análisis de datos y generación creativa para transformar los procesos desde la idea hasta la publicación. 
+                            ML permite automatizar tareas repetitivas crear trailers o anuncios personalizados según audiencia, generar resúmenes o guiones parciales,
+                             mediante doblaje o subtítulos en múltiples idiomas. Además, ayuda a optimizar la creatividad y eficiencia, liberando tiempo para que los equipos 
+                            humanos diseñen narrativas más estratégicas y emotivas.
+                            <a href="https://www.tvtechnology.com/opinion/beyond-automation-how-ai-orchestration-is-redefining-media-workflows">Narayanan Rajan(2025)</a>
+                        </p>
+
                     </div>
                 </div>
             </div>
