--- a/templates/index2.html
+++ b/templates/index2.html
@@ -15,7 +15,7 @@
 
 </head>
 <body class="bgH1">
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container-fluid">
       <button 
         class="navbar-toggler" 
@@ -53,15 +53,6 @@
           <li class="nav-item">
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input 
-            class="form-control me-2" 
-            type="search" 
-            placeholder="Search" 
-            aria-label="Search"
-          >
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
       </div>
   </nav>
   <script 
