--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 body.bgH1 {
-    background-image: url("/static/Homero1.jpeg");
+    background-image: url("/static/icono.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
