--- a/templates/index2.html
+++ b/templates/index2.html
@@ -53,12 +53,69 @@
           <li class="nav-item">
           </li>
         </ul>
-      </div>
   </nav>
+
   <script 
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous">
   </script>
+    <section class="container" style="margin-top: 100px;">
+      <div class="row justify-content-center g-4">
+       <div class="col-md-50">
+          <div class="card h-100 shadow-lg bg-dark text-light">
+            <div class="card-body">
+              <h5 class="card-title">¿Qué es el ML?</h5>
+              <p class="card-text">El Machine Learning es un subcampo de la inteligencia artificial
+                 que se enfoca en desarrollar algoritmos y modelos estadísticos capaces de aprender 
+                 automáticamente a partir de datos y mejorar su desempeño sin requerir instrucciones
+                  explícitas y existen varios tipos de ML <a href="https://www.ibm.com/think/topics/machine-learning">IBM(2024)</a>
+                </p>
+                <p><strong>1.supervisado</strong>se entrena con datos etiquetados, por ejemplo, fotos de una cosa o persona especifica </p>
+                <p><strong>2.No supervisado</strong>La IA encuentra sus propios patrones de forma autonoma, sin necesidad de etiquetas </p>
+                <p><strong>3.Refuerzos</strong>es común en modelos como bots de juegos y arquitectura, funciona mediante la pruea y error de algunos escenarios</p>
+                <p><a href="https://mitsloan.mit.edu/ideas-made-to-matter/machine-learning-explained">Sara Brown(2021)</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container mt-5" style="margin-top: auto;">
+      <div class="row justify-content-center">
+        <div class="col-md-5">
+          <div class="card auto shadow-lg bg-dark text-danger">
+            <div class="card-body">
+              <p><strong>Machine Learning 601T</strong></p>
+                <p>Edison Gustavo Canon Varela</p>
+            </div>
+          </div>
+        </div>        
+      </div>
+    </section>
+    <style>
+      body::before {
+        content: "";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(20, 20, 20, 0.7);
+        z-index: -1;
+    }
+    .card {
+        border: none;
+        border-radius: 15px;
+        transition: transform 0.1s;
+    }
+    .card1{
+        border: none;
+        border-radius: 1px;
+    }
+
+    .card:hover {
+        transform: translateY(-3px);
+    }
+    </style>
 </body>
 </html>
