--- a/templates/rl.html
+++ b/templates/rl.html
@@ -15,6 +15,7 @@
 
 </head>
 <body class="bgH1">
+
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container-fluid">
       <button 
@@ -63,40 +64,24 @@
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous">
-  </script>
-    <section class="container" style="margin-top: 100px;">
-      <div class="row justify-content-center g-4">
-       <div class="col-md-50">
-          <div class="card h-100 shadow-lg bg-dark text-light">
-            <div class="card-body">
-              <h5 class="card-title">¿Qué es el ML?</h5>
-              <p class="card-text">El Machine Learning es un subcampo de la inteligencia artificial
-                 que se enfoca en desarrollar algoritmos y modelos estadísticos capaces de aprender 
-                 automáticamente a partir de datos y mejorar su desempeño sin requerir instrucciones
-                  explícitas y existen varios tipos de ML <a href="https://www.ibm.com/think/topics/machine-learning">IBM(2024)</a>
-                </p>
-                <p><strong>1.supervisado</strong>se entrena con datos etiquetados, por ejemplo, fotos de una cosa o persona especifica </p>
-                <p><strong>2.No supervisado</strong>La IA encuentra sus propios patrones de forma autonoma, sin necesidad de etiquetas </p>
-                <p><strong>3.Refuerzos</strong>es común en modelos como bots de juegos y arquitectura, funciona mediante la pruea y error de algunos escenarios</p>
-                <p><a href="https://mitsloan.mit.edu/ideas-made-to-matter/machine-learning-explained">Sara Brown(2021)</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="container mt-5" style="margin-top: auto;">
-      <div class="row justify-content-center">
-        <div class="col-md-5">
-          <div class="card auto shadow-lg bg-dark text-danger">
-            <div class="card-body">
-              <p><strong>Machine Learning 601T</strong></p>
-                <p>Edison Gustavo Canon Varela</p>
-            </div>
-          </div>
-        </div>        
-      </div>
-    </section>
+</script>   
+    <h1>Regresión lineal<h1>
+        <form method="post">
+            <label for="hours">Horas de estudio</label> 
+            <input type="number"  name="hours" required>
+            <button type="submit">Predecir</button>
+
+            {% if result is not none %}
+                <h2>Calificación estimada: {{ result }}</h2>
+            {% endif %}
+        </form>
     <style>
+        h1{
+            color:#fff;
+        }
+        h2{
+            color:#fff;
+        }
       .navbar{
         background-color: black;
       }
