--- a/templates/index2.html
+++ b/templates/index2.html
@@ -1,149 +1,115 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Casos de uso</title>
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+  <meta charset="UTF-8" /> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+  <title>Casos de uso</title> 
   <link 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous"
-  >
-<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  > 
+  <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}"> 
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> 
+</head> 
+<body class="bgH1"> 
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark"> 
+    <div class="container-fluid"> 
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> 
+        <span class="navbar-toggler-icon"></span> 
+      </button> 
+      <div class="collapse navbar-collapse" id="navbarSupportedContent"> 
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0"> 
+          <li class="nav-item"> 
+            <a class="nav-link active" aria-current="page" href="/">Home</a> 
+          </li> 
+          <li class="nav-item dropdown"> 
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+              Menu 
+            </a> 
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown"> 
+              <!-- Submenú Casos ML -->
+              <li class="dropdown-submenu"> 
+                <a class="dropdown-item dropdown-toggle" href="#">Casos ML</a> 
+                <ul class="dropdown-menu"> 
+                  <li><a class="dropdown-item" href="/casoUno">Primer Caso</a></li> 
+                  <li><a class="dropdown-item" href="/casoDos">Segundo Caso</a></li> 
+                  <li><a class="dropdown-item" href="/casoTres">Tercer Caso</a></li> 
+                  <li><a class="dropdown-item" href="/casoCuatro">Cuarto Caso</a></li> 
+                </ul> 
+              </li> 
 
-</head>
-<body class="bgH1">
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-    <div class="container-fluid">
-      <button 
-        class="navbar-toggler" 
-        type="button" 
-        data-bs-toggle="collapse" 
-        data-bs-target="#navbarSupportedContent" 
-        aria-controls="navbarSupportedContent" 
-        aria-expanded="false" 
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a 
-              class="nav-link dropdown-toggle" 
-              href="#" 
-              id="navbarDropdown" 
-              role="button" 
-              data-bs-toggle="dropdown" 
-              aria-expanded="false">
-              Menu
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <!-- Submenú Regresión Lineal -->
               <li class="dropdown-submenu">
-                <a class="dropdown-item dropdown-toggle" href="#">Casos ML</a>
+                <a class="dropdown-item dropdown-toggle" href="#">Regresión Lineal</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/casoUno">Primer Caso</a></li>
-                  <li><a class="dropdown-item" href="/casoDos">Segundo Caso</a></li>
-                  <li><a class="dropdown-item" href="/casoTres">Tercer Caso</a></li>
-                  <li><a class="dropdown-item" href="/casoCuatro">Cuarto Caso</a></li>
+                  <li><a class="dropdown-item" href="/regresionConceptos">Conceptos básicos</a></li>
+                  <li><a class="dropdown-item" href="/regresionPractica">Ejercicio práctico</a></li>
                 </ul>
               </li>
-            </ul>
-          </li>
-          <li class="nav-item">
-          </li>
-        </ul>
-  </nav>
+            </ul> 
+          </li> 
+        </ul> 
+      </div>
+    </div>
+  </nav> 
 
   <script 
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous">
-  </script>
-    <section class="container" style="margin-top: 100px;">
-      <div class="row justify-content-center g-4">
-       <div class="col-md-50">
-          <div class="card h-100 shadow-lg bg-dark text-light">
-            <div class="card-body">
-              <h5 class="card-title">¿Qué es el ML?</h5>
-              <p class="card-text">El Machine Learning es un subcampo de la inteligencia artificial
-                 que se enfoca en desarrollar algoritmos y modelos estadísticos capaces de aprender 
-                 automáticamente a partir de datos y mejorar su desempeño sin requerir instrucciones
-                  explícitas y existen varios tipos de ML <a href="https://www.ibm.com/think/topics/machine-learning">IBM(2024)</a>
-                </p>
-                <p><strong>1.supervisado</strong>se entrena con datos etiquetados, por ejemplo, fotos de una cosa o persona especifica </p>
-                <p><strong>2.No supervisado</strong>La IA encuentra sus propios patrones de forma autonoma, sin necesidad de etiquetas </p>
-                <p><strong>3.Refuerzos</strong>es común en modelos como bots de juegos y arquitectura, funciona mediante la pruea y error de algunos escenarios</p>
-                <p><a href="https://mitsloan.mit.edu/ideas-made-to-matter/machine-learning-explained">Sara Brown(2021)</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="container mt-5" style="margin-top: auto;">
-      <div class="row justify-content-center">
-        <div class="col-md-5">
-          <div class="card auto shadow-lg bg-dark text-danger">
-            <div class="card-body">
-              <p><strong>Machine Learning 601T</strong></p>
-                <p>Edison Gustavo Canon Varela</p>
-            </div>
-          </div>
-        </div>        
-      </div>
-    </section>
-    <style>
-      .navbar{
-        background-color: black;
-      }
-      .dropdown-menu {
-        background-color: #212529;
-      }
-      .dropdown-item {
-        color: #fff;
-      }
-      .dropdown-item:hover {
-        background-color: #343a40;
-      }
-      .dropdown-submenu{
-        position: relative
-      }
-      .dropdown-submenu > .dropdown-menu{
-        display:none;
-        top:0;
-        left:100%;
-        margin-top: 3px;
-      }
-      .dropdown-submenu:hover > .dropdown-menu {
-        display: block;
-      }
-      body::before {
-        content: "";
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(20, 20, 20, 0.7);
-        z-index: -1;
-    }
-    .card {
-        border: none;
-        border-radius: 15px;
-        transition: transform 0.1s;
-    }
-    .card1{
-        border: none;
-        border-radius: 1px;
-    }
+  </script> 
 
-    .card:hover {
-        transform: translateY(-3px);
-    }
-    </style>
-</body>
+  <section class="container" style="margin-top: 100px;"> 
+    <div class="row justify-content-center g-4"> 
+      <div class="col-md-50"> 
+        <div class="card h-100 shadow-lg bg-dark text-light"> 
+          <div class="card-body"> 
+            <h5 class="card-title">¿Qué es el ML?</h5> 
+            <p class="card-text">
+              El Machine Learning es un subcampo de la inteligencia artificial
+              que se enfoca en desarrollar algoritmos y modelos estadísticos capaces de aprender 
+              automáticamente a partir de datos y mejorar su desempeño sin requerir instrucciones
+              explícitas y existen varios tipos de ML 
+              <a href="https://www.ibm.com/think/topics/machine-learning">IBM(2024)</a>
+            </p> 
+            <p><strong>1. Supervisado:</strong> se entrena con datos etiquetados, por ejemplo, fotos de una cosa o persona específica. </p> 
+            <p><strong>2. No supervisado:</strong> la IA encuentra sus propios patrones de forma autónoma, sin necesidad de etiquetas. </p> 
+            <p><strong>3. Refuerzos:</strong> es común en modelos como bots de juegos y arquitectura, funciona mediante la prueba y error de algunos escenarios. </p> 
+            <p><a href="https://mitsloan.mit.edu/ideas-made-to-matter/machine-learning-explained">Sara Brown (2021)</a></p> 
+          </div> 
+        </div> 
+      </div> 
+    </div> 
+  </section> 
+
+  <section class="container mt-5" style="margin-top: auto;"> 
+    <div class="row justify-content-center"> 
+      <div class="col-md-5"> 
+        <div class="card auto shadow-lg bg-dark text-danger"> 
+          <div class="card-body"> 
+            <p><strong>Machine Learning 601T</strong></p> 
+            <p>Edison Gustavo Canon Varela</p> 
+          </div> 
+        </div> 
+      </div>         
+    </div> 
+  </section> 
+
+  <style> 
+    .navbar{ background-color: black; } 
+    .dropdown-menu { background-color: #212529; } 
+    .dropdown-item { color: #fff; } 
+    .dropdown-item:hover { background-color: #343a40; } 
+    .dropdown-submenu{ position: relative } 
+    .dropdown-submenu > .dropdown-menu{ display:none; top:0; left:100%; margin-top: 3px; } 
+    .dropdown-submenu:hover > .dropdown-menu { display: block; } 
+    body::before { content: ""; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(20, 20, 20, 0.7); z-index: -1; } 
+    .card { border: none; border-radius: 15px; transition: transform 0.1s; } 
+    .card1{ border: none; border-radius: 1px; } 
+    .card:hover { transform: translateY(-3px); } 
+  </style> 
+</body> 
 </html>
