añadidos los modelos
ha sido añadido el modelo de linear regresion, añadida la distancia y los pasajeros como variables independientes y precio como dependiente

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -46,7 +46,7 @@
                 <a class="dropdown-item dropdown-toggle" href="#">Regresión Lineal</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/regresionConceptos">Conceptos básicos</a></li>
-                  <li><a class="dropdown-item" href="/regresionPractica">Ejercicio práctico</a></li>
+                  <li><a class="dropdown-item" href="/LR">Ejercicio práctico</a></li>
                 </ul>
               </li>
             </ul> 
