--- a/templates/rl.html
+++ b/templates/rl.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Casos de uso</title>
+  <title>Regresión Lineal</title>
   <link 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous"
   >
-<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-
+  <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body class="bgH1">
 
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container-fluid">
       <button 
         class="navbar-toggler" 
@@ -31,7 +31,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item dropdown">
             <a 
@@ -51,85 +51,93 @@
                   <li><a class="dropdown-item" href="/casoDos">Segundo Caso</a></li>
                   <li><a class="dropdown-item" href="/casoTres">Tercer Caso</a></li>
                   <li><a class="dropdown-item" href="/casoCuatro">Cuarto Caso</a></li>
+                  <li><a class="dropdown-item" href="/grafico">Gráfico de Dispersión</a></li>
                 </ul>
               </li>
             </ul>
           </li>
-          <li class="nav-item">
-          </li>
         </ul>
+      </div>
+    </div>
   </nav>
+
+
+  <div class="container my-5">
+    <h1 class="text-center">Regresión Lineal</h1>
+
+    <form method="post" action="/LR" class="text-center my-4">
+      <label for="distancia" class="me-2 text-light">Distancia (KM)</label>
+      <input type="number" name="distancia" required class="me-3">
+
+      <label for="pasajeros" class="me-2 text-light">Pasajeros</label>
+      <input type="number" name="pasajeros" required class="me-3">
+
+      <button type="submit" class="btn btn-primary">Predecir</button>
+    </form>
+
+
+    {% if result is not none %}
+      <div class="text-center">
+        <h2 class="text-light">Precio estimado: {{ result }}</h2>
+      </div>
+    {% endif %}
+
+
+    {% if graph_url %}
+    <div class="text-center my-5">
+      <h3 class="text-light">Gráfico de Dispersión</h3>
+      <img src="{{ graph_url }}" alt="Gráfico de Dispersión" class="img-fluid rounded shadow my-3">
+     
+    </div>
+    {% endif %}
+  </div>
+
 
   <script 
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous">
-</script>   
-    <h1>Regresión lineal<h1>
-        <form method="post">
-            <label for="distancia">Distancia </label> 
-            <label for="pasajeros">Pasajeros</label>
-            <input type="number"  name="distancia" required>
-            <input type="number" name="pasajeros" required>
-            <button type="submit">Predecir</button>
-            {% if result is not none %}
-                <h2>Calificación estimada: {{ result }}</h2>
-            {% endif %}
-        </form>
-    <style>
-        h1{
-            color:#fff;
-        }
-        h2{
-            color:#fff;
-        }
-      .navbar{
-        background-color: black;
-      }
-      .dropdown-menu {
-        background-color: #212529;
-      }
-      .dropdown-item {
-        color: #fff;
-      }
-      .dropdown-item:hover {
-        background-color: #343a40;
-      }
-      .dropdown-submenu{
-        position: relative
-      }
-      .dropdown-submenu > .dropdown-menu{
-        display:none;
-        top:0;
-        left:100%;
-        margin-top: 3px;
-      }
-      .dropdown-submenu:hover > .dropdown-menu {
-        display: block;
-      }
-      body::before {
-        content: "";
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(20, 20, 20, 0.7);
-        z-index: -1;
-    }
-    .card {
-        border: none;
-        border-radius: 15px;
-        transition: transform 0.1s;
-    }
-    .card1{
-        border: none;
-        border-radius: 1px;
-    }
+  </script>
 
-    .card:hover {
-        transform: translateY(-3px);
+
+  <style>
+    h1, h2, h3 {
+      color: #fff;
     }
-    </style>
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(20, 20, 20, 0.7);
+      z-index: -1;
+    }
+    .navbar {
+      background-color: black;
+    }
+    .dropdown-menu {
+      background-color: #212529;
+    }
+    .dropdown-item {
+      color: #fff;
+    }
+    .dropdown-item:hover {
+      background-color: #343a40;
+    }
+    .dropdown-submenu {
+      position: relative;
+    }
+    .dropdown-submenu > .dropdown-menu {
+      display: none;
+      top: 0;
+      left: 100%;
+      margin-top: 3px;
+    }
+    .dropdown-submenu:hover > .dropdown-menu {
+      display: block;
+    }
+  </style>
 </body>
 </html>
