añadidos la actualizacion de formulario para agregar datos
el forulario para ingresar datos nuevos ha sido creado, los submenus se agregaron a cada uno de los templates.
se arreglo cierto problema con la importacion de librerias en el app.py.
el front end de LR ha sido modificado, el color de las fuentes cambiadas, el logo del proyecto se mantiene en el fondo y el diseño concuerda con el ejecutado en los conceptos basicos(teoricos)

--- a/templates/casoUno.html
+++ b/templates/casoUno.html
@@ -51,6 +51,14 @@
                   <li><a class="dropdown-item" href="/casoCuatro">Cuarto Caso</a></li>
                 </ul>
               </li>
+              <!-- Submenú Regresión Lineal -->
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#">Regresión Lineal</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/regresionConceptos">Conceptos básicos</a></li>
+                  <li><a class="dropdown-item" href="/LR">Ejercicio práctico</a></li>
+                </ul>
+              </li>
             </ul>
           </li>
           <li class="nav-item">
