Adicionamiento de submenu
Se hace revision a detalle de cada html para poder adicionar el menu de Tipos de algoritmos de clasificacion con el fin de que se pueda agregar el nuevo modelo y no se afecte la estructura de la pagina.

--- a/templates/rl.html
+++ b/templates/rl.html
@@ -58,6 +58,14 @@
                   <li><a class="dropdown-item" href="/Lc">Ejercicio práctico</a></li>
                 </ul>
               </li>
+              <!-- Submenú Tipos de Algoritmos de Clasificación -->
+              <li class="dropdown-submenu">
+                <a class="dropdown-item dropdown-toggle" href="#">Tipos de Algoritmos de Clasificación</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/TiposConceptos">Conceptos básicos</a></li>
+                  <li><a class="dropdown-item" href="/TiposCaso">Caso práctico</a></li>
+                </ul>
+              </li>
             </ul> 
           </li> 
         </ul> 
