corregidos los submenus y agregado el mapa
el mapa conceptual ha sido agregado de una manera que no me convence mucho, seguiremos informando

--- a/templates/rlconceptos.html
+++ b/templates/rlconceptos.html
@@ -85,8 +85,8 @@
               <li class="dropdown-submenu">
                 <a class="dropdown-item dropdown-toggle" href="#">Tipos de Algoritmos de Clasificación</a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/TiposConceptos">Conceptos básicos</a></li>
-                  <li><a class="dropdown-item" href="/TiposCaso">Caso práctico</a></li>
+                  <li><a class="dropdown-item" href="/Practicos">Conceptos básicos</a></li>
+                  <li><a class="dropdown-item" href="/naivebayes">Caso práctico</a></li>
                 </ul>
               </li>
             </ul> 
