--- a/templates/AlgoritClas.html
+++ b/templates/AlgoritClas.html
@@ -1,44 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Conceptos básicos - Tipos de Algoritmos de Clasificación</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background: url("{{ url_for('static', filename='RL.jpg') }}") no-repeat center center fixed;
-      background-size: cover;
-    }
-    .card {
-      background: rgba(255, 255, 255, 0.85);
-      border-radius: 15px;
-      box-shadow: 0px 4px 15px rgba(0,0,0,0.3);
-    }
-    .accordion-button {
-      background: rgba(33, 37, 41, 0.9);
-      color: #fff;
-      font-weight: bold;
-    }
-    .accordion-button:not(.collapsed) {
-      background: #212529;
-      color: #fff;
-    }
-    .accordion-body {
-      color: #212529;
-    }
-    .navbar{ background-color: black; }
-    .dropdown-menu { background-color: #212529; }
-    .dropdown-item { color: #fff; }
-    .dropdown-item:hover { background-color: #343a40; }
-    .dropdown-submenu{ position: relative }
-    .dropdown-submenu > .dropdown-menu{ display:none; top:0; left:100%; margin-top: 3px; }
-    .dropdown-submenu:hover > .dropdown-menu { display: block; }
-  </style>
+    <meta charset="UTF-8" /> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+  <title>Casos de uso</title> 
+  <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous"
+  > 
+  <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}"> 
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> 
 </head>
-<body>
-
-
+<body class="bgH1">
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark"> 
     <div class="container-fluid"> 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
@@ -84,12 +59,53 @@
              <!-- Submenú Tipos de Algoritmos de Clasificación -->
             <li class="dropdown-submenu">
             <a class="dropdown-item dropdown-toggle" href="#">Tipos de Algoritmos de Clasificación</a>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/TiposConceptos">Conceptos básicos</a></li>
-                <li><a class="dropdown-item" href="/TiposCaso">Caso práctico</a></li>
-            </ul>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="/Practicos">Conceptos básicos</a></li>
+                  <li><a class="dropdown-item" href="/naivebayes">Caso práctico</a></li>
+                </ul>
             </li>
         </ul> 
       </div>
     </div>
-  </nav> 
+  </nav>
+  <div class="container my-5">
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" 
+    sandbox="allow-scripts allow-popups allow-forms allow-modals allow-same-origin" 
+    width="900" height="450" src="https://boardmix.com/app/share/CAE.CMOztQEgASoQn18D-DETrirg9WVeSJLzrTAGQAE/o9V33D" allowfullscreen>}
+  </iframe>
+  </div>
+  <style>
+    body {
+      background: url("{{ url_for('static', filename='RL.jpg') }}") no-repeat center center fixed;
+      background-size: cover;
+    }
+    .card {
+      background: rgba(255, 255, 255, 0.85);
+      border-radius: 15px;
+      box-shadow: 0px 4px 15px rgba(0,0,0,0.3);
+    }
+    .accordion-button {
+      background: rgba(33, 37, 41, 0.9);
+      color: #fff;
+      font-weight: bold;
+    }
+    .accordion-button:not(.collapsed) {
+      background: #212529;
+      color: #fff;
+    }
+    .accordion-body {
+      color: #212529;
+    }
+    .navbar{ background-color: black; }
+    .dropdown-menu { background-color: #212529; }
+    .dropdown-item { color: #fff; }
+    .dropdown-item:hover { background-color: #343a40; }
+    .dropdown-submenu{ position: relative }
+    .dropdown-submenu > .dropdown-menu{ display:none; top:0; left:100%; margin-top: 3px; }
+    .dropdown-submenu:hover > .dropdown-menu { display: block; }
+  </style>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+  crossorigin="anonymous"></script>
+</body>
+</html>
